--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,24 @@
 
     <Button
         android:id="@+id/btnActTwo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="100dp"
+        android:background="@color/colorthree"
         android:onClick="onClick"
-        android:text="Go to Activity Two"></Button>
+        android:text="Go to Activity Two">
+
+    </Button>
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_margin="20dp"
+        android:textSize="20dp"
+        android:text="Ваше имя, которое хотите увидеть на втором активити.">
+    </TextView>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:id="@+id/name"/>
 </LinearLayout>
